# dnd-app-backend

./: .gitignore  Cargo.toml  README.md
migrations/: 20241224162329_user_table.sql  20241224214841_change_discord_id.sql  20241229071117_dnd_sessions.sql  20241229224538_dnd_campaigns.sql  20241229230118_campaign_to_player_table.sql  20241230042320_invite_table.sql  20241230061132_uses_not_null.sql
src/: auth.rs  config.rs  db.rs  lib.rs  main.rs  ws.rs
src/api/: campaigns.rs  mod.rs  sessions.rs
